# anomala

.github/workflows/: backend.yml
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  main.py  pyproject.toml  seed_db.py
backend/backend/: main.py  models.py
backend/backend/alembic/: env.py
backend/backend/alembic/versions/: 20241123_1539_737a3096074f_initial_migration.py  20241123_1542_6e78535ca849_add_initial_seed_data.py  20241123_1704_296c754dec63_add_seed_data.py  20241123_1704_c530704aecd8_initial_migration_with_updated_models.py  20241123_2007_bc03b9831e8c_add_caused_block_to_text_message.py  20241123_2010_9d34177f9909_change_ips_from_int_to_str.py  20241124_0226_adcb321513ca_initial_migration.py  20241124_0248_48664d84b1ec_initial_migration.py  20241124_0303_81747df8dbf3_initial_migration.py  20241124_0529_e9c915b4a06d_add_ip_address_to_local_storage.py  20241124_0542_a5b478b6b867_add_ip_address_to_local_storage.py  seed_by_hand.py
backend/backend/api/: dependencies.py  schemas.py
backend/backend/api/endpoints/: localStorage.py  text.py
backend/backend/core/: database.py
backend/backend/services/: llm.py  llm_localStorage.py
docs/: README.md
front/: package-lock.json  package.json  sample_logs.json  script.js  tailwind.config.js
front/pages/: _document.js
front/public/: logs.json  script.js
front/src/components/: AttackChart.js  LogsTable.js  Navbar.js  StatsCard.js  TitleHeader.js
infra/: .terraform.lock.hcl  README.md  main.tf  output.tf
infra/ansible_common/: setup.yaml
(+10 files in other folders)
